[gd_scene load_steps=4 format=3 uid="uid://luyvd6byu4p2"]

[ext_resource type="Script" path="res://scenes/settings/settings_panel.gd" id="1_d7oeo"]
[ext_resource type="StyleBox" uid="uid://bvfw2mamqhny6" path="res://scenes/main/side_panel_flat.tres" id="1_ec2m2"]
[ext_resource type="PackedScene" uid="uid://brgyc1ncvpiuw" path="res://scenes/settings/circle_ui_section.tscn" id="3_s48jy"]

[node name="SettingsPanel" type="MarginContainer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 262.0
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("1_d7oeo")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = ExtResource("1_ec2m2")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 16

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="SettingsList" type="VBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="General" type="VBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer/SettingsList"]
layout_mode = 2

[node name="Header" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/SettingsList/General"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "General"

[node name="Body" type="MarginContainer" parent="PanelContainer/MarginContainer/ScrollContainer/SettingsList/General"]
layout_mode = 2
theme_override_constants/margin_left = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer/SettingsList/General/Body"]
layout_mode = 2

[node name="Color" type="HBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer/SettingsList/General/Body/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/SettingsList/General/Body/VBoxContainer/Color"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
text = "Background"

[node name="BackgroundColorPickerButton" type="ColorPickerButton" parent="PanelContainer/MarginContainer/ScrollContainer/SettingsList/General/Body/VBoxContainer/Color"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0

[node name="InnerCircle" parent="PanelContainer/MarginContainer/ScrollContainer/SettingsList" instance=ExtResource("3_s48jy")]
unique_name_in_owner = true
layout_mode = 2
SECTION_TITLE = "Inner Circle"
RADIUS_MIN = 60.0
RADIUS_MAX = 120.0
SPACING_MIN = 3.0
SPACING_MAX = 10.0
RINGS_NUMBER_MAX = 8.0
RINGS_RADIUS_MIN = 8.0
RINGS_RADIUS_MAX = 32.0

[node name="OuterCircle" parent="PanelContainer/MarginContainer/ScrollContainer/SettingsList" instance=ExtResource("3_s48jy")]
unique_name_in_owner = true
layout_mode = 2
SECTION_TITLE = "Outer Circle"
RADIUS_MIN = 180.0
RADIUS_MAX = 320.0
SPACING_MIN = 3.0
SPACING_MAX = 10.0
RINGS_NUMBER_MAX = 16.0
RINGS_RADIUS_MIN = 8.0
RINGS_RADIUS_MAX = 32.0

[connection signal="color_changed" from="PanelContainer/MarginContainer/ScrollContainer/SettingsList/General/Body/VBoxContainer/Color/BackgroundColorPickerButton" to="." method="_on_background_color_picker_button_color_changed"]
[connection signal="double_line_spacing_bottom" from="PanelContainer/MarginContainer/ScrollContainer/SettingsList/InnerCircle" to="." method="_on_inner_circle_double_line_spacing_bottom"]
[connection signal="double_line_toggle_bottom" from="PanelContainer/MarginContainer/ScrollContainer/SettingsList/InnerCircle" to="." method="_on_inner_circle_double_line_toggle_bottom"]
[connection signal="line_color_bottom" from="PanelContainer/MarginContainer/ScrollContainer/SettingsList/InnerCircle" to="." method="_on_inner_circle_line_color_bottom"]
[connection signal="radius_slider_bottom" from="PanelContainer/MarginContainer/ScrollContainer/SettingsList/InnerCircle" to="." method="_on_inner_circle_radius_slider_bottom"]
[connection signal="rings_number_bottom" from="PanelContainer/MarginContainer/ScrollContainer/SettingsList/InnerCircle" to="." method="_on_inner_circle_rings_number_bottom"]
[connection signal="rings_offset_bottom" from="PanelContainer/MarginContainer/ScrollContainer/SettingsList/InnerCircle" to="." method="_on_inner_circle_rings_offset_bottom"]
[connection signal="rings_radius_bottom" from="PanelContainer/MarginContainer/ScrollContainer/SettingsList/InnerCircle" to="." method="_on_inner_circle_rings_radius_bottom"]
[connection signal="rings_toggle_bottom" from="PanelContainer/MarginContainer/ScrollContainer/SettingsList/InnerCircle" to="." method="_on_inner_circle_rings_toggle_bottom"]
[connection signal="section_toggle_bottom" from="PanelContainer/MarginContainer/ScrollContainer/SettingsList/InnerCircle" to="." method="_on_inner_circle_section_toggle_bottom"]
[connection signal="double_line_spacing_bottom" from="PanelContainer/MarginContainer/ScrollContainer/SettingsList/OuterCircle" to="." method="_on_outer_circle_double_line_spacing_bottom"]
[connection signal="double_line_toggle_bottom" from="PanelContainer/MarginContainer/ScrollContainer/SettingsList/OuterCircle" to="." method="_on_outer_circle_double_line_toggle_bottom"]
[connection signal="line_color_bottom" from="PanelContainer/MarginContainer/ScrollContainer/SettingsList/OuterCircle" to="." method="_on_outer_circle_line_color_bottom"]
[connection signal="radius_slider_bottom" from="PanelContainer/MarginContainer/ScrollContainer/SettingsList/OuterCircle" to="." method="_on_outer_circle_radius_slider_bottom"]
[connection signal="rings_number_bottom" from="PanelContainer/MarginContainer/ScrollContainer/SettingsList/OuterCircle" to="." method="_on_outer_circle_rings_number_bottom"]
[connection signal="rings_offset_bottom" from="PanelContainer/MarginContainer/ScrollContainer/SettingsList/OuterCircle" to="." method="_on_outer_circle_rings_offset_bottom"]
[connection signal="rings_radius_bottom" from="PanelContainer/MarginContainer/ScrollContainer/SettingsList/OuterCircle" to="." method="_on_outer_circle_rings_radius_bottom"]
[connection signal="rings_toggle_bottom" from="PanelContainer/MarginContainer/ScrollContainer/SettingsList/OuterCircle" to="." method="_on_outer_circle_rings_toggle_bottom"]
[connection signal="section_toggle_bottom" from="PanelContainer/MarginContainer/ScrollContainer/SettingsList/OuterCircle" to="." method="_on_outer_circle_section_toggle_bottom"]
